Automatically backed up by Learn

--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,4 +1,4 @@
-<h1>Pirate <%= @pirate.name%></h1>
+<h1>Pirate <%= @pirate.name% weighs <%= @pirate.weight %> and is <%= @pirate.height  %></h1>
 
 
 <h2>Display your first ship here</h2>
