--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -21,5 +21,5 @@
   <label for="ship_booty_2">Ship Booty</label>
   <input type="text" id="ship_booty_2" name ="pirate[ships][][booty]"><br><br>
 
-  <input type="submit" value="submit">
+  <input type="submit" value="Submit">
 </form>
