--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,25 @@
-<h1>Make your form here</h1>
+<h1>Pirate Details</h1>
+<form action="/pirates" method="post">
+  <label for="pirate_name" id="pirate_name">Pirate Name</label>
+  <input type="text" id="pirate_name" name ="pirate[name]"><br><br>
+  <label for="pirate_weight" id="pirate_weight">Pirate Weight</label>
+  <input type="text" id="pirate_weight" name ="pirate[weight]"><br><br>
+  <label for="pirate_height" id="pirate_height">Pirate Height</label>
+  <input type="text" id="pirate_height" name ="pirate[height]"><br><br>
+
+  <label for="ship_name_1">Ship Name</label>
+  <input type="text" id="ship_name_1" name ="pirate[ships][][name]">
+  <label for="ship_type_1">Ship Type</label>
+  <input type="text" id="ship_type_1" name ="pirate[ships][][type]">
+  <label for="ship_booty_1">Ship Booty</label>
+  <input type="text" id="ship_booty_1" name ="pirate[ships][][booty]"><br><br>
+
+  <label for="ship_name_2">Ship Name</label>
+  <input type="text" id="ship_name_2" name ="pirate[ships][][name]">
+  <label for="ship_type_2">Ship Type</label>
+  <input type="text" id="ship_type_2" name ="pirate[ships][][type]">
+  <label for="ship_booty_2">Ship Booty</label>
+  <input type="text" id="ship_booty_2" name ="pirate[ships][][booty]"><br><br>
+
+  <input type="submit" value="Submit">
+</form>
