--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,6 @@
-<h1>Display your Pirate here</h1>
+<h1>Pirate <%= @pirate.name%> weighs <%= @pirate.weight %> and is <%= @pirate.height %></h1>
 
 
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<% @ships.each do |ship| %>
+  <h2><%= ship.name %> is a <%= ship.type %> and carrying a booty of <%= ship.booty %></h2>
+<% end %>
